[tool.poetry]
name = "denet-testing"
version = "0.1.0"
description = ""
authors = ["Memorizu <kaidohmary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic-settings = "^2.3.4"
web3 = "^6.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
